--- a/secureapp/templates/base.html
+++ b/secureapp/templates/base.html
@@ -2,20 +2,24 @@
 
 <!DOCTYPE html>
 
-
 <html lang="en">
 
 
      <head>
 
-
            <meta charset="utf-8" />
 
-           <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1"/>
+           <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/lux/bootstrap.min.css"/>
 
+           <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1"/> 
+           
            <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 
      </head>
 
 
+{% block content %}
+     
+{% endblock  %}
+        
 </html>
