--- a/secureapp/templates/index.html
+++ b/secureapp/templates/index.html
@@ -1,3 +1,98 @@
-{% include 'base.html' %}
+{% extends "base.html" %} 
 
-<h1>Home Page</h1>
+
+{% block content %}
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-white justify-content-center">
+
+    
+    <a class="navbar-brand main-heading" href="{% url 'home' %}"> 
+            
+    &nbsp; SecureX 
+    
+    </a>
+
+    <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+>
+            <span class="navbar-toggler-icon"></span>
+
+    </button>
+
+
+    <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
+
+    
+        <ul class="navbar-nav ms-auto">
+
+
+
+            <li class="nav-item">
+        
+                <a class="btn btn-alert navbar-btn" type="button"  href="{% url 'register' %}">Register</a>
+            
+            </li>
+
+            
+
+            <li class="nav-item">
+
+                <a class="btn btn-alert navbar-btn" type="button"  href="{% url 'home' %}">Login</a>
+
+            </li>
+
+           
+
+        </ul>
+    
+    
+    </div>
+
+
+</nav>
+
+
+
+<body>
+
+  
+    <br>
+    <br>
+
+    <div class="text-center">
+
+    
+        <img src="" alt="My image" style="height: 100px; width: 100px;">
+
+
+    <br>
+    <br>
+
+    <h3> SecureX .... The most secure website out there! </h3>
+
+        <br>
+
+        <p> Ensure that your Django web application is secure in all areas. </p>
+
+        <br>
+        
+    
+        <a class="btn btn-info" type="button"  href="{% url 'register' %}"> <i class="fa fa-user" aria-hidden="true"></i> &nbsp; Make an account </a>
+
+    
+    </div>
+
+  
+</body>
+
+
+<br> <br>
+
+{% endblock %}
