--- a/secureapp/templates/base.html
+++ b/secureapp/templates/base.html
@@ -4,7 +4,6 @@
 
 <html lang="en">
 
-
      <head>
 
            <meta charset="utf-8" />
@@ -12,14 +11,18 @@
            <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/lux/bootstrap.min.css"/>
 
            <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1"/> 
-           
+
            <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 
      </head>
 
-
-{% block content %}
-     
-{% endblock  %}
+      {% block content %}
+      
+      {% endblock  %}
         
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+
 </html>
