--- a/secureapp/templates/index.html
+++ b/secureapp/templates/index.html
@@ -1,15 +1,12 @@
 {% extends "base.html" %} 
-
-
+{% load static %}
 {% block content %}
-
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white justify-content-center">
 
-    
     <a class="navbar-brand main-heading" href="{% url 'home' %}"> 
             
-    &nbsp; SecureX 
+        &nbsp; SecureX 
     
     </a>
 
@@ -26,13 +23,9 @@
 
     </button>
 
-
     <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-
     
         <ul class="navbar-nav ms-auto">
-
-
 
             <li class="nav-item">
         
@@ -40,37 +33,26 @@
             
             </li>
 
-            
-
             <li class="nav-item">
 
                 <a class="btn btn-alert navbar-btn" type="button"  href="{% url 'home' %}">Login</a>
 
             </li>
 
-           
-
         </ul>
-    
-    
+        
     </div>
-
 
 </nav>
 
-
-
 <body>
-
   
     <br>
     <br>
 
     <div class="text-center">
 
-    
-        <img src="" alt="My image" style="height: 100px; width: 100px;">
-
+        <img src="{% static 'images/secure.png' %}" alt="My image" style="height: 100px; width: 100px;">
 
     <br>
     <br>
@@ -82,16 +64,12 @@
         <p> Ensure that your Django web application is secure in all areas. </p>
 
         <br>
-        
-    
+            
         <a class="btn btn-info" type="button"  href="{% url 'register' %}"> <i class="fa fa-user" aria-hidden="true"></i> &nbsp; Make an account </a>
-
     
     </div>
-
-  
+ 
 </body>
-
 
 <br> <br>
 
