--- a/secureapp/templates/index.html
+++ b/secureapp/templates/index.html
@@ -4,7 +4,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white justify-content-center">
 
-    <a class="navbar-brand main-heading" href="{% url 'home' %}"> 
+    <a class="navbar-brand main-heading" href="{% url '' %}"> 
             
         &nbsp; SecureX 
     
@@ -35,7 +35,7 @@
 
             <li class="nav-item">
 
-                <a class="btn btn-alert navbar-btn" type="button"  href="{% url 'home' %}">Login</a>
+                <a class="btn btn-alert navbar-btn" type="button"  href="{% url '' %}">Login</a>
 
             </li>
 
